--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "tailwindcss": "^3.2.7"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
